--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -53,7 +53,7 @@
                                         </div>
 
                                         <a onclick="iniciarSesion()" href="#" class="btn btn-primary btn-user btn-block">
-                                            Login
+                                            Iniciar Sesión
                                         </a>
                                         <hr>
                                     </form>
