se implementa logica en las vistas

--- a/src/main/resources/static/loginMa.html
+++ b/src/main/resources/static/loginMa.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
+
 <head>
 
   <meta charset="utf-8">
@@ -122,4 +123,8 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <script src="js/sb-admin-2.min.js"></script>
+
+  <script src="js/login.js"></script>
+
+  </body>
 </html>
