--- a/src/main/resources/static/forgot-password.html
+++ b/src/main/resources/static/forgot-password.html
@@ -49,16 +49,16 @@
                                                 id="exampleInputEmail" aria-describedby="emailHelp"
                                                 placeholder="Enter Email Address...">
                                         </div>
-                                        <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                        <a href="loginMa.html" class="btn btn-primary btn-user btn-block">
                                             Reset Password
                                         </a>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="registrar.html">Create an Account!</a>
+                                        <a class="small" href="registrarMa.html">Create an Account!</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="login.html">Already have an account? Login!</a>
+                                        <a class="small" href="loginMa.html">Already have an account? Login!</a>
                                     </div>
                                 </div>
                             </div>
