--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="static/css/inicio.css">
+    <link rel="stylesheet" href="css/inicio.css">
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio</title>
@@ -26,40 +26,40 @@
 
         <div class="options__menu">
 
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-house" title="Inicio"></i>
                     <h4>Inicio</h4>
                 </div>
             </a>
 
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-building" title="Instalaciones"></i>
                     <h4>Instalaciones</h4>
                 </div>
             </a>
 
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-laptop" title="Activos"></i>
                     <h4>Activos</h4>
                 </div>
             </a>
 
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
                 </div>
             </a>
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-list" title="Ordenes de trabajo"></i>
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="inicio.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <script src="static/js/inicio.js"></script>
+    <script src="js/inicio.js"></script>
 
 </body>
 
