--- a/src/main/resources/static/registrarMa.html
+++ b/src/main/resources/static/registrarMa.html
@@ -77,9 +77,17 @@
                                             placeholder="Apellidos">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="txtEmail"
-                                        placeholder="E-mail">
+                                <div class="form-group row">
+
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="text" class="form-control form-control-user" id="txtEmail"
+                                               placeholder="E-mail">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input type="text" class="form-control form-control-user" id="txtTelefono"
+                                               placeholder="Telefono">
+                                    </div>
+
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -92,11 +100,43 @@
                                     </div>
                                 </div>
                                 <a onclick="registrarUsuarios()" href="#" class="btn btn-primary btn-user btn-block">
-                                    Registrar
+                                    Registrar Usuario
                                 </a>
                                 <hr>
 
                             </form>
+
+                            <!-- Tabla contenedora -->
+
+                                <div class="container-fluid">
+                                    <!-- DataTales Example -->
+                                    <div class="card shadow mb-4">
+                                        <div class="card-header py-3">
+                                            <h6 class="m-0 font-weight-bold text-primary">Usuarios registrados</h6>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="table-responsive">
+                                                <table class="table table-bordered" id="usuarios" width="100%" cellspacing="0">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Id</th>
+                                                        <th>Nombre completo</th>
+                                                        <th>E-mail</th>
+                                                        <th>Telefono</th>
+                                                        <th>Acciones</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
                             <hr>
                         </div>
                     </div>
@@ -117,6 +157,7 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <!-- Inicio prgramacionJavaScript-->
+    <script src="js/usuarios.js"></script>
     <script src="js/registrar.js"></script>
 
 </body>
