--- a/src/main/resources/static/reporte.html
+++ b/src/main/resources/static/reporte.html
@@ -95,7 +95,7 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
+                        <a class="collapse-item" href="loginMa.html">Login</a>
                         <a class="collapse-item" href="forgot-password.html">Olvide mi contraseña</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
@@ -269,7 +269,7 @@
                     <div class="modal-body">Seleccione "Cerrar sesión" a continuación si está listo para finalizar su sesión actual.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                        <a class="btn btn-primary" href="login.html">Cerrar sesión</a>
+                        <a class="btn btn-primary" href="loginMa.html">Cerrar sesión</a>
                     </div>
                 </div>
             </div>
