se hace adelanto de las vistas del inicio, activos, instalaciones

--- a/src/main/resources/ordenes.html
+++ b/src/main/resources/ordenes.html
@@ -23,11 +23,9 @@
         <div class="profile-options">
             <ul>
                 <li><a href="#">Configuración</a></li>
-                <li><a href="#" id="logout">Cerrar sesión</a></li>
+                <li><a href="#">Cerrar sesión</a></li>
             </ul>
         </div>
-        
-            
     </header>
 
     <!-- Sidebar -->
