logica de instalaciones y activos

--- a/src/main/resources/static/ordenes.html
+++ b/src/main/resources/static/ordenes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="static/css/inicio.css">
+    <link rel="stylesheet" href="css/inicio.css">
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -23,11 +23,9 @@
         <div class="profile-options">
             <ul>
                 <li><a href="#">Configuración</a></li>
-                <li><a href="#" id="logout">Cerrar sesión</a></li>
+                <li><a href="#">Cerrar sesión</a></li>
             </ul>
         </div>
-        
-            
     </header>
 
     <!-- Sidebar -->
@@ -52,7 +50,7 @@
                 </div>
             </a>
 
-            <a href="activos.html" class="selected">
+            <a href="../activos.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-laptop" title="Activos"></i>
                     <h4>Activos</h4>
@@ -118,7 +116,7 @@
     </div>
     <!-- Fin de las tarjetas -->
 
-    <script src="static/js/inicio.js"></script>
+    <script src="js/inicio.js"></script>
 
 </body>
 
