--- a/src/main/resources/static/inicio.html
+++ b/src/main/resources/static/inicio.html
@@ -52,7 +52,7 @@
                 </div>
             </a>
 
-            <a href="../activos.html" class="selected">
+            <a href="activos.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-laptop" title="Activos"></i>
                     <h4>Activos</h4>
