logica de activos 2

--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -137,18 +137,13 @@
             
             <div class="campo">
                 <label for="modelo">Modelo:</label>
-                <input type="text"  id="modelo" name="direccion" >
+                <input type="text"  id="modelo" name="modelo" >
             </div>
-
-
 
             <div class="botones">
-                <button type="submit" onclick="registrarInstalaciones()" href="#">Guardar</button>
+                <button type="submit" onclick="registrar()" href="#">Guardar</button>
             </div>
 
-            <!-- Tabla contenedora -->
-
-            
         </div>
 
     </div>
