--- a/src/main/resources/static/xxxxxx.html
+++ b/src/main/resources/static/xxxxxx.html
@@ -3,31 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
+    <title>Document</title>
+
 </head>
 <body>
 
-    <table class="table" id="instalacion">
-        <thead>
-          <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Estado</th>
-            <th scope="col">Criticidad</th>
-            <th scope="col">Familia</th>
-            <th scope="col">Direccion</th>
-            <th scope="col">Comentario</th>
-            <th scope="col">Aciones</th>
-            <th scope="col"></th>
-        </thead>
-        <tbody>
+    <!-- Aquí se mostrará la lista de nombres de activos -->
+    <div class="campo">
+      <label for="instalaciones">Instalacion:</label>
+      <select id="instalaciones" name="instalaciones">
 
-        </tbody>
-      </table>
-
-    <script src="js/instalacion/mostrar.js"></script>
-    
+      </select>
+    </div>
+    <!-- Agrega aquí tus scripts de JavaScript -->
+    <script src="js/informes/informe.js"></script>
+  
 </body>
 </html>
