ajustes en el front

--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="static/css/inicio.css">
+    <link rel="stylesheet" href="css/inicio.css">
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -16,14 +16,18 @@
             <h1>MACOMSY</h1>
         </span>
         <!-- Icono de perfil -->
+
+       
         <div class="profile-icon">
+
             <i class="fas fa-user-circle"></i>
+            <span class="admin-text">Admin</span>
         </div>
         <!-- Menú de opciones de perfil -->
         <div class="profile-options">
             <ul>
                 <li><a href="#">Configuración</a></li>
-                <li><a href="#" id="logout">Cerrar sesión</a></li>
+                <li><a href="loginMa.html" id="logout">Cerrar sesión</a></li>
             </ul>
         </div>
         
@@ -38,7 +42,7 @@
         </div>
 
         <div class="options__menu">
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-house" title="Inicio"></i>
                     <h4>Inicio</h4>
@@ -71,7 +75,7 @@
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="T_humano.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
@@ -118,7 +122,7 @@
     </div>
     <!-- Fin de las tarjetas -->
 
-    <script src="static/js/inicio.js"></script>
+    <script src="js/inicio.js"></script>
 
 </body>
 
