--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="options__menu">
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-house" title="Inicio"></i>
                     <h4>Inicio</h4>
@@ -74,7 +74,7 @@
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="T_humano.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
