--- a/src/main/resources/static/inicioMaprueba.html
+++ b/src/main/resources/static/inicioMaprueba.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="static/css/inicio.css">
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -118,7 +118,7 @@
     </div>
     <!-- Fin de las tarjetas -->
 
-    <script src="js/inicio.js"></script>
+    <script src="static/js/inicio.js"></script>
 
 </body>
 
