cambio en la vista de instalaciones

--- a/src/main/resources/static/ordenes.html
+++ b/src/main/resources/static/ordenes.html
@@ -50,7 +50,7 @@
                 </div>
             </a>
 
-            <a href="../activos.html" class="selected">
+            <a href="activos.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-laptop" title="Activos"></i>
                     <h4>Activos</h4>
@@ -69,7 +69,7 @@
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="T_humano.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
