--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -76,7 +76,7 @@
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="T_humano.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
