--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="css/inicio.css">
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* Estilo para el botón de generar reporte */
+        .boton-generar-reporte {
+            position: fixed; /* Fija la posición del botón */
+            top: 20px; /* Distancia desde la parte superior */
+            right: 20px; /* Distancia desde el lado derecho */
+            z-index: 1000; /* Asegura que el botón esté por encima de otros elementos */
+        }
+
+        .boton-generar-reporte button {
+            padding: 10px 20px; /* Espaciado interno del botón */
+            border: none;
+            border-radius: 5px;
+            background-color: #27374D; /* Color de fondo azul */
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .boton-generar-reporte button:hover {
+            background-color: #1B2536; /* Cambio de color al pasar el ratón por encima */
+        }
+    </style>
 </head>
 
 <body id="body">
@@ -84,6 +107,11 @@
         </div>
     </div>
     <!-- Fin del sidebar -->
+
+    <!-- Botón de generar reporte -->
+    <div class="boton-generar-reporte">
+        <button onclick="generarReporte()">Generar Reporte</button>
+    </div>
 
     <!-- Contenedor de las tarjetas con margen superior -->
     <div class="tarjetas__container" style="margin-top: 100px;">
