cambio en la vista de instalaciones

--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -237,7 +237,7 @@
                                 <!-- DataTales Example -->
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <h6 class="m-0 font-weight-bold text-primary">Usuarios registrados</h6>
+                                        <h6 class="m-0 font-weight-bold text-primary">instalaciones</h6>
                                     </div>
                                     <div class="card-body">
                                         <div class="table-responsive">
@@ -245,10 +245,10 @@
                                                 <thead>
                                                 <tr>
                                                     <th>Id</th>
-                                                    <th>Nombre completo</th>
-                                                    <th>E-mail</th>
-                                                    <th>Telefono</th>
-                                                    <th>Acciones</th>
+                                                    <th>Nombre</th>
+                                                    <th>Criticidad</th>
+                                                    <th>Familia</th>
+                                                    <th>Direccion</th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
