cambio en la vista de instalaciones

--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -74,19 +74,11 @@
             padding: 20px;
             
         }
-        .imagen-container {
-            width: 100%;
-            height: auto;
-            max-width: 70%;
-            margin-top: 20px; /* Ajusta según sea necesario */
-            overflow: hidden;
+        .imagen-cubierta {
+            max-width: 100%; /* Ajusta el ancho máximo de la imagen al 50% */
+            height: 100%; /* Mantén la proporción de la imagen */
         }
-
-        .imagen-container img {
-            width: 100%;
-            height: auto;
-            max-width: 70%;
-        }
+        
     </style>
 </head>
 
