cambio en la vista de instalaciones y activos

--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -11,8 +11,8 @@
         /* Estilo para el botón de generar reporte */
         .boton-generar-reporte {
             position: fixed; /* Fija la posición del botón */
-            top: 20px; /* Distancia desde la parte superior */
-            right: 20px; /* Distancia desde el lado derecho */
+            top: 60px; /* Distancia desde la parte superior */
+            right: 8px; /* Distancia desde el lado derecho */
             z-index: 1000; /* Asegura que el botón esté por encima de otros elementos */
         }
 
@@ -110,9 +110,8 @@
 
     <!-- Botón de generar reporte -->
     <div class="boton-generar-reporte">
-        <button onclick="generarReporte()">Generar Reporte</button>
+        <button onclick="location.href='reporteMantenimiento.html'">Generar Reporte</button>
     </div>
-
     <!-- Contenedor de las tarjetas con margen superior -->
     <div class="tarjetas__container" style="margin-top: 100px;">
         <div class="tarjeta">
