--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -75,8 +75,8 @@
             
         }
         .imagen-cubierta {
-            max-width: 100%; /* Ajusta el ancho máximo de la imagen al 50% */
-            height: 100%; /* Mantén la proporción de la imagen */
+            max-width: 200px; /* Ajusta el ancho máximo de la imagen al 50% */
+            height: 120px; /* Mantén la proporción de la imagen */
         }
         
     </style>
@@ -212,7 +212,7 @@
                                 <div class="form-group row">
                                     <div class="col-sm-12 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user"
-                                            id="txtPassword" placeholder="Comentarios">
+                                            id="txt" placeholder="Comentarios">
                                     </div>
                                 </div>
                                 <a onclick="registrarUsuarios()" href="#" class="btn btn-primary btn-user btn-block">
@@ -229,7 +229,7 @@
                                 <!-- DataTales Example -->
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
-                                        <h6 class="m-0 font-weight-bold text-primary">instalaciones</h6>
+                                        <h6 class="m-0 font-weight-bold text-primary">Instalaciones</h6>
                                     </div>
                                     <div class="card-body">
                                         <div class="table-responsive">
