cambio en reporteMantenimiento

--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -11,8 +11,8 @@
         /* Estilo para el botón de generar reporte */
         .boton-generar-reporte {
             position: fixed; /* Fija la posición del botón */
-            top: 60px; /* Distancia desde la parte superior */
-            right: 8px; /* Distancia desde el lado derecho */
+            left: 80px; /* Distancia desde la parte superior */
+            top: 500px; /* Distancia desde el lado derecho */
             z-index: 1000; /* Asegura que el botón esté por encima de otros elementos */
         }
 
@@ -86,7 +86,7 @@
                 </div>
             </a>
 
-            <a href="mantenimiento.html" class="selected">
+            <a href="reporteMantenimiento.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
