--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <title>actvos</title>
+    <title>Activos</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -134,7 +134,7 @@
                 </div>
             </a>
 
-            <a href="mantenimiento.html" class="selected">
+            <a href="reporteMantenimiento.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
@@ -277,6 +277,7 @@
     <!-- <script src="js/instalacion/instalacion.js"></script> -->
     <script src="js/Activos/mostrar.js"></script>
     <script src="js/Activos/instalacion.js"></script>
+    <script src="js/inicio.js"></script>
 
 </body>
 
