--- a/src/main/resources/static/ordenes.html
+++ b/src/main/resources/static/ordenes.html
@@ -18,6 +18,7 @@
         <!-- Icono de perfil -->
         <div class="profile-icon">
             <i class="fas fa-user-circle"></i>
+            <span class="admin-text">Admin</span>
         </div>
         <!-- Menú de opciones de perfil -->
         <div class="profile-options">
@@ -57,7 +58,7 @@
                 </div>
             </a>
 
-            <a href="mantenimiento.html" class="selected">
+            <a href="reporteMantenimiento.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
