--- a/src/main/resources/static/reporteMantenimiento.html
+++ b/src/main/resources/static/reporteMantenimiento.html
@@ -25,6 +25,7 @@
         <!-- Icono de perfil -->
         <div class="profile-icon">
             <i class="fas fa-user-circle"></i>
+            <span class="admin-text">Admin</span>
         </div>
         <!-- Menú de opciones de perfil -->
         <div class="profile-options">
@@ -57,14 +58,14 @@
                 </div>
             </a>
 
-            <a href="../activos.html" class="selected">
+            <a href="activos.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-laptop" title="Activos"></i>
                     <h4>Activos</h4>
                 </div>
             </a>
 
-            <a href="mantenimiento.html" class="selected">
+            <a href="reporteMantenimiento.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
@@ -76,7 +77,7 @@
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="T_humano.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
