--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -13,7 +13,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <title>Instalacion</title>
+    <title>Instalaciones</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -153,7 +153,7 @@
                 </div>
             </a>
 
-            <a href="mantenimiento.html" class="selected">
+            <a href="reporteMantenimiento.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
@@ -211,7 +211,7 @@
                         <div class="p-5">
                             <div class="text-center">
                                 <!-- Título con los nuevos estilos -->
-                                <h1 class="h4 mb-4 registrar-title">Instalación</h1>
+                                <h1 class="h4 mb-4 registrar-title">Instalaciones</h1>
                             </div>
                             <form class="user">
                                 <div class="form-group row">
@@ -294,6 +294,7 @@
     <!-- <script src="js/instalacion/instalacion.js"></script> -->
     <script src="js/instalacion/mostrar.js"></script>
     <script src="js/instalacion/instalacion.js"></script>
+    <script src="js/inicio.js"></script>
 
 </body>
 
