--- a/src/main/resources/static/reporteMantenimiento.html
+++ b/src/main/resources/static/reporteMantenimiento.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="options__menu">
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-house" title="Inicio"></i>
                     <h4>Inicio</h4>
