se realizan ajustes en el menu

--- a/src/main/resources/static/reporteMantenimiento.html
+++ b/src/main/resources/static/reporteMantenimiento.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Instalaciones</title>
+    <title>Mantenimiento</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -24,16 +24,16 @@
         <span id="title_header" class="show_title">
             <h1>MACOMSY</h1>
         </span>
+
         <!-- Icono de perfil -->
-        <div class="profile-icon">
-            <i class="fas fa-user-circle"></i>
-            <span class="admin-text">Admin</span>
-        </div>
+
+
         <!-- Menú de opciones de perfil -->
         <div class="profile-options">
+            
             <ul>
                 <li><a href="#">Configuración</a></li>
-                <li><a href="#">Cerrar sesión </a></li>
+                <li><a href="loginMa.html">Cerrar sesión </a></li>
             </ul>
         </div>
     </header>
@@ -94,7 +94,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Instalaciones</title>
+    <title>Mantenimiento</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -117,15 +117,12 @@
         </span>
         <!-- Icono de perfil -->
         <div class="profile-icon">
+
             <i class="fas fa-user-circle"></i>
+            <span class="admin-text">Admin</span>
         </div>
-        <!-- Menú de opciones de perfil -->
-        <div class="profile-options">
-            <ul>
-                <li><a href="#">Configuración</a></li>
-                <li><a href="#">Cerrar sesión</a></li>
-            </ul>
-        </div>
+
+      
     </header>
 
     <!-- Sidebar -->
@@ -136,7 +133,7 @@
         </div>
 
         <div class="options__menu">
-            <a href="inicio.html" class="selected">
+            <a href="inicioMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-house" title="Inicio"></i>
                     <h4>Inicio</h4>
@@ -157,7 +154,7 @@
                 </div>
             </a>
 
-            <a href="mantenimiento.html" class="selected">
+            <a href="reporteMantenimiento.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
                     <h4>Mantenimiento</h4>
@@ -169,7 +166,7 @@
                     <h4>Ordenes de trabajo</h4>
                 </div>
             </a>
-            <a href="T_humano.html" class="selected">
+            <a href="registrarMa.html" class="selected">
                 <div class="opcion">
                     <i class="fa-solid fa-user-tie" title="Talento humano"></i>
                     <h4>Talento humano</h4>
@@ -320,6 +317,7 @@
     <!-- <script src="js/instalacion/instalacion.js"></script> -->
     <script src="js/Activos/mostrar.js"></script>
     <script src="js/Activos/instalacion.js"></script>
+       <script src="js/inicio.js"></script>
 
 </body>
 
