Changes to be committed: 	modified:   src/main/resources/static/inicioMa.html 	new file:   src/main/resources/static/js/Ordenes/instalacion.js 	new file:   src/main/resources/static/js/Ordenes/mostrar.js 	modified:   src/main/resources/static/js/informes/informe.js 	new file:   src/main/resources/static/js/mantenimiento/instalacion.js 	new file:   src/main/resources/static/js/mantenimiento/mostrar.js 	modified:   src/main/resources/static/ordenes.html 	modified:   src/main/resources/static/reporteMantenimiento.html 	modified:   src/main/resources/static/xxxxxx.html

--- a/src/main/resources/static/xxxxxx.html
+++ b/src/main/resources/static/xxxxxx.html
@@ -10,12 +10,14 @@
 <body>
 
     <!-- Aquí se mostrará la lista de nombres de activos -->
-    <div class="campo">
-      <label for="instalaciones">Instalacion:</label>
-      <select id="instalaciones" name="instalaciones">
+    <div class="tarjeta" id="tarjetaorden">
 
-      </select>
     </div>
+
+
+
+
+    
     <!-- Agrega aquí tus scripts de JavaScript -->
     <script src="js/informes/informe.js"></script>
   
