--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/inicio.css">
     <script src="https://kit.fontawesome.com/ab43f04f6c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         /* Estilo para el botón de generar reporte */
         .boton-generar-reporte {
@@ -29,6 +30,10 @@
         .boton-generar-reporte button:hover {
             background-color: #1B2536; /* Cambio de color al pasar el ratón por encima */
         }
+
+
+
+
     </style>
 </head>
 
@@ -113,43 +118,15 @@
         <button onclick="location.href='reporteMantenimiento.html'">Generar Reporte</button>
     </div>
     <!-- Contenedor de las tarjetas con margen superior -->
-    <div class="tarjetas__container" style="margin-top: 100px;">
-        <div class="tarjeta">
-            <div class="titulo">
-                <h3 class="numero-caso">[CASO: CMMS-2024-001]</h3>
-            </div>
-            <div class="contenido">
-                <i class="fa-solid fa-wrench icono" title="Mantenimiento"></i>
-                <p class="texto">Informe de mantenimiento programado para el sistema eléctrico del edificio principal.</p>
-                <p class="urgencia urgencia-media">Urgencia: Media</p>
-            </div>
-        </div>
 
-        <div class="tarjeta">
-            <div class="titulo">
-                <h3 class="numero-caso">[CASO: CMMS-2024-002]</h3>
-            </div>
-            <div class="contenido">
-                <i class="fa-solid fa-wrench icono" title="Mantenimiento"></i>
-                <p class="texto">Reporte de avería en el sistema de climatización del salón de clases A101.</p>
-                <p class="urgencia urgencia-alta">Urgencia: Alta</p>
-            </div>
-        </div>
 
-        <div class="tarjeta">
-            <div class="titulo">
-                <h3 class="numero-caso">[CASO: CMMS-2024-003]</h3>
-            </div>
-            <div class="contenido">
-                <i class="fa-solid fa-wrench icono" title="Mantenimiento"></i>
-                <p class="texto">Solicitud de mantenimiento preventivo para los equipos de laboratorio de química.</p>
-                <p class="urgencia urgencia-media">Urgencia: Media</p>
-            </div>
-        </div>
+    <div class="tarjetas__container" style="margin-top: 100px;" id="tarjetaorden">
+
     </div>
     <!-- Fin de las tarjetas -->
 
     <script src="js/inicio.js"></script>
+    <script src="js/informes/informe.js"></script>
 
 </body>
 
