--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -184,12 +184,11 @@
                                 <!-- Contenedor del icono o la imagen -->
                                 <div id="icono-casa" class="icono-casa">
                                     <i class="fas fa-house fa-5x mb-4" style="color: #27374D;"></i>
-
                                     <h2 style="color: #27374D;">Subir y mostrar imagen</h2>
-
-                                    <input type="file" accept="image/*" onchange="mostrarImagen(this)">
+                                    <img id="imagen" class="imagen-cubierta" src="" >
+                                    <input type="file" id="imagen" accept="image/*">
                                     <br><br>
-                                    <img id="imagen" src="#" alt="Tu imagen aparecerá aquí" width="300">
+
                                 </div>
                             </div>
                         </div>
