funcionalidad de subir imagen

--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -186,7 +186,7 @@
                                     <i class="fas fa-house fa-5x mb-4" style="color: #27374D;"></i>
                                     <h2 style="color: #27374D;">Subir y mostrar imagen</h2>
                                     <img id="imagen" class="imagen-cubierta" src="" >
-                                    <input type="file" id="imagen" accept="image/*">
+                                    <input type="file" accept="image/*" onchange="mostrarImagen(this)">
                                     <br><br>
 
                                 </div>
