--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -186,12 +186,10 @@
                         <div class="p-5">
                             <div class="text-center">
                                 <!-- Contenedor del icono o la imagen -->
-                                <!-- Contenedor del icono o la imagen -->
                                 <div id="icono-casa" class="icono-casa">
                                     <i class="fas fa-house fa-5x mb-4" style="color: #27374D;"></i>
-
                                     <h2 style="color: #27374D;">Subir y mostrar imagen</h2>
-
+                                    <img id="imagen" class="imagen-cubierta" src="" >
                                     <input type="file" accept="image/*" onchange="mostrarImagen(this)">
                                     <br><br>
                              
