funcion de subir imagen y reemplazar icono y texto

--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -190,7 +190,7 @@
                                     <i class="fas fa-house fa-5x mb-4" style="color: #27374D;"></i>
                                     <h2 style="color: #27374D;">Subir y mostrar imagen</h2>
                                     <img id="imagen" class="imagen-cubierta" src="" >
-                                    <input type="file" accept="image/*" onchange="mostrarImagen(this)">
+                                    <input id="imagen" type="file" accept="image/*" onchange="mostrarImagenMa(this)">
                                     <br><br>
                              
                                     </div>
