cambio en los tamaños de la imagen

--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -75,10 +75,11 @@
             
         }
         .imagen-cubierta {
-            max-width: 200px; /* Ajusta el ancho máximo de la imagen al 50% */
-            height: 120px; /* Mantén la proporción de la imagen */
+            max-width: 600px; /* Ajusta el ancho máximo de la imagen */
+            max-height: 200px; /* Ajusta la altura máxima de la imagen */
+            width: auto; /* Permitir que el ancho se ajuste automáticamente según el alto */
+            height: auto; /* Permitir que el alto se ajuste automáticamente según el ancho */
         }
-        
     </style>
 
 
