--- a/src/main/resources/static/xxxxxx.html
+++ b/src/main/resources/static/xxxxxx.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
 
 </head>
 <body>
 
-    <!-- Aquí se mostrará la lista de nombres de activos -->
-    <div class="tarjeta" id="tarjetaorden">
 
-    </div>
+<div style="max-width: 18rem;" id="tarjetaorden">
 
+</div>
 
-
-
-    
     <!-- Agrega aquí tus scripts de JavaScript -->
     <script src="js/informes/informe.js"></script>
   
