--- a/src/main/resources/static/ordenes.html
+++ b/src/main/resources/static/ordenes.html
@@ -183,23 +183,23 @@
                 <h3>Orden de trabajo</h3>
                 <div class="row">
                     <div class="col">
-                        <label for="numero_reporte">Prioridad:</label>
+                        <label for="prioridad">Prioridad:</label>
                         <select id="prioridad" name="prioridad" class="form-control form-control-user" placeholder="prioridad">
-                            <option value="critico">Crítico</option>
-                            <option value="alto">Alto</option>
-                            <option value="medio">Medio</option>
-                            <option value="bajo">Bajo</option>
+                            <option value="Critico">Crítico</option>
+                            <option value="Alto">Alto</option>
+                            <option value="Medio">Medio</option>
+                            <option value="Bajo">Bajo</option>
                         </select>
                     </div>
                     <div class="col">
-                        <label for="numero_reporte">Cuenta N°:</label>
+                        <label for="Cuenta">Cuenta N°:</label>
                         <input type="text" id="Cuenta" name="Cuenta">
                     </div>
  
 
                     <div class="row">
                         <div class="col">
-                            <label for="numero_reporte">Requerido por:</label>
+                            <label for="requerido">Requerido por:</label>
                             <input type="text" id="requerido" name="requerido">
                         </div>
                         <div class="col">
@@ -218,7 +218,7 @@
                             <input type="text" id="equipo" name="equipo">
                         </div>
                         <div class="col">
-                            <label for="sección">Ubicación:</label>
+                            <label for="ubicacion">Ubicación:</label>
                             <input type="tel" id="ubicacion" name="ubicacion">
                         </div>
 
