--- a/src/main/resources/static/loginMa.html
+++ b/src/main/resources/static/loginMa.html
@@ -45,7 +45,7 @@
     }
 
     .btn-primary:hover {
-      background-color: #DDE6ED;
+      background-color: #1d5885;
       border-color: #DDE6ED;
     }
 
