--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -82,6 +82,19 @@
             width: auto; /* Permitir que el ancho se ajuste automáticamente según el alto */
             height: auto; /* Permitir que el alto se ajuste automáticamente según el ancho */
         }
+        
+            .form-control-user,
+            .form-control-user option {
+                color: black;
+            }
+                .form-control-black {
+                    color: black;
+                }
+        
+                #criticidad,
+                #familia {
+                    color: black;
+                }
     </style>
 
 
